--- a/estilo.css
+++ b/estilo.css
@@ -97,6 +97,10 @@ h4{
     margin-bottom: 0px;
 }
 /*Formatação de imagens com legendas */
+.foto{
+    margin-top: 70px;
+    align: left;
+}
 figure.foto-com-legenda {
     position: relative;
     border: 8px solid white;
@@ -187,7 +191,7 @@ footer#rodape{
     font-family: 'FonteLogo';
     font-size: 15pt;
     clear: both;
-    border-top: 1px solid #606060;
+    border-top: 1px solid #333;
 }
 footer#rodape p{
     text-align: center;
